objects/ASI_CRM_Price_Set_Generation_Log__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FreeText_Remark__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>SA Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Hub Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_Set</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_Set1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_Set2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Urgent_PriceSet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent</label>
        <type>Checkbox</type>
    </fields>
    <label>Price Set Submission</label>
    <listViews>
        <fullName>ASI_CRM_Approved_Price_Set</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ASI_CRM_Submission_Date__c</columns>
        <columns>ASI_CRM_Approved_Date__c</columns>
        <columns>ASI_CRM_Completed_Date__c</columns>
        <columns>ASI_CRM_Urgent_PriceSet__c</columns>
        <columns>ASI_CRM_FreeText_Remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>All Approved Price Set Submissions</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_HK_CRM_Sales_Administration_Executive</role>
            <role>ASI_HK_CRM_Shared_Service_Centre</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_Completed_Price_Set</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Submission_Date__c</columns>
        <columns>ASI_CRM_Approved_Date__c</columns>
        <columns>ASI_CRM_Completed_Date__c</columns>
        <columns>ASI_CRM_Urgent_PriceSet__c</columns>
        <columns>ASI_CRM_FreeText_Remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>All Completed Price Set Submissions</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_HK_CRM_Sales_Administration_Executive</role>
            <role>ASI_HK_CRM_Shared_Service_Centre</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_HK_All_Price_Set</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Submission_Date__c</columns>
        <columns>ASI_CRM_Approved_Date__c</columns>
        <columns>ASI_CRM_Completed_Date__c</columns>
        <columns>ASI_CRM_Urgent_PriceSet__c</columns>
        <columns>ASI_CRM_FreeText_Remark__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Price Set Submissions</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_HK_CRM_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PSG-{00000000}</displayFormat>
        <label>Price Set Generation Log Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Set Submissions</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_HK_Price_Set</fullName>
        <active>true</active>
        <label>HK Price Set</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>